fixed ui alignment and default value input components for parameter table

--- a/node-ui-dev/src/app/typed-editable-table/typed-editable-table.component.scss
+++ b/node-ui-dev/src/app/typed-editable-table/typed-editable-table.component.scss
@@ -9,3 +9,7 @@
   transition: 0.1s all ease;
   background-color: $select;
 }
+
+.table-cell {
+  padding-top: 10px;
+}
